Fixed image fit to parent / corners overflow hidden

--- a/src/components/PlayerImage/styles.module.scss
+++ b/src/components/PlayerImage/styles.module.scss
@@ -1,5 +1,11 @@
 .wrapper {
     display: contents;
+
+    img {
+        max-width: 100%;
+        max-height: 100%;
+        overflow: hidden;
+    }
 }
 
 .disconnected {
