--- a/src/components/PlayerSlot/styles.module.scss
+++ b/src/components/PlayerSlot/styles.module.scss
@@ -7,6 +7,7 @@
     height: 310px;
     border: 2px solid wheat;
     border-radius: 10px;
+    overflow: hidden;
 
     &.disconnected {
         border: 2px solid #858077;
@@ -20,6 +21,7 @@
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
+    overflow: hidden;
 }
 
 .name {
